# CRIMAC-FM-testdatapaper

./: .gitignore  DataSets.csv  README.md  cal2png.py  check_data.py  get_data.py  get_data_S3.py  getconfs.py  merge_track_df_and_work.py  naming.csv  pc2png.py  pc2svcompressed.py  pc2svf.py  pc2tracks.py  pc2tsf.py  pc2tsf_profiler.py  pc2tsf_profilergpt.py  process_all.sh  process_pipeline_main.py  pyproject.toml  raw2meta.py  raw2pc.py  raw2track.py  requirements-3.10.txt  requirements.txt  setup.cfg  testdata.csv  testdata_info.csv  track2csv.py  trackingParams.json  trackingparameters.json
.github/workflows/: python-check.yaml
config/T2019001/: TransducerRanges.xml
config/T2020001/: FFT.json  TrackingParams.json  TransducerRanges.xml
config/T2020002/: TrackingParams.json  TransducerRanges.xml
config/T2020003/: TrackingParams.json  TransducerRanges.xml
config/T2020008/: TrackingParams.json  TransducerRanges.xml
config/T2021001/: TrackingParams.json  TransducerRanges.xml
config/T2021002/: TrackingParams.json  TransducerRanges.xml
config/T2021003/: TrackingParams.json  TransducerRanges.xml
config/T2021004/: TrackingParams.json  TransducerRanges.xml
config/T2021005/: TrackingParams.json  TransducerRanges.xml
config/T2022001/: TrackingParams.json  TransducerRanges.xml
config/T2023001/: TrackingParams.json  TransducerRanges.xml
content/: export-data.txt  output_filename.txt
docs/: TSf_datamodel.csv  TSf_datamodel.md  tracks.md
scripts/: check_data.py  get_data.py  pc2tsf_data.py  raw2pc_data.py  raw2track_data.py
src/crimactools/: logging.py  (+8 more)
(+7 files in other folders)
