[project]
name = "crimactools"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dask>=2026.1.1",
    "ektools>=0.1.2",
    "koronascript>=0.2.1",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "regex>=2026.1.15",
    "requests>=2.32.5",
    "scikit-image>=0.26.0",
    "tqdm>=4.67.1",
    "xarray>=2025.12.0",
]

[dependency-groups]
dev = [
    "ipython>=8.37.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "ty>=0.0.13",
]

[tool.uv]
package = true
